@@ -38,19 +38,20 @@ public class MainApp extends Application
         Combo combo1 = new Combo(46, new ArrayList<Integer>(Arrays.asList(cassete1)));
         Combo combo2 = new Combo(38, new ArrayList<Integer>(Arrays.asList(cassete2)));
         Combo combo3 = new Combo(36, new ArrayList<Integer>(Arrays.asList(cassete1)));
+        Combo combo4 = new Combo(40, new ArrayList<Integer>(Arrays.asList(cassete1)));
         
         ArrayList<Combo> setup1 = new ArrayList<Combo>();
         ArrayList<Combo> setup2 = new ArrayList<Combo>();
         ArrayList<Combo> setup3 = new ArrayList<Combo>();
         
-        setup1.add(combo1);
+        setup1.add(combo2);
         
-        setup2.add(combo1);
-        setup2.add(combo2);
+        setup2.add(combo1); // all combos in a setup should have the same cassette
+        setup2.add(combo3);
         
         setup3.add(combo1);
-        setup3.add(combo2);
         setup3.add(combo3);
+        setup3.add(combo4);
         
         gearChart.addSetup(setup1);
         gearChart.addSetup(setup2);
